--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,6 +3,8 @@ site_url: https://ps2hackswiki.netlify.app
 docs_dir: docs/
 theme:
   name: 'material'
+  logo: assets/controller.png
+  favicon: assets/controller.png
   features:
     - navigation.sections
     - navigation.indexes
