First draft of PS2 HDD guides

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,4 +11,8 @@ nav:
   - Hardware:
     - Controller adapters: hardware/controller-adapters.md
   - Software:
+    - Create drive partitions: software/create-drive-partitions.md
+    - HDL Batch Installer: software/hdl-batch-installer.md
+    - Install FreeHDBoot: software/install-freehdboot.md
     - OPL: software/OPL.md
+    - Add artwork to OPL: software/add-artwork-to-opl.md
