Add OPL guide with links; various updates
- Added overview guide for setting up and using OPL (mainly compiling other guides)
- Added download links under requirements sections
- Added steps for downloading OPL manager
- Added steps for downloading Dokan
- Added link for where to find OPL themes as well as clarification on how to copy OPL themes

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,7 +27,8 @@ nav:
     - software/index.md
     - Internal HDD guide: software/internal-hdd-guide.md
     - Create drive partitions: software/create-drive-partitions.md
-    - Install OPL: software/OPL.md
+    - Install OPL: software/install-OPL.md
     - HDL Batch Installer: software/hdl-batch-installer.md
     - Add artwork to OPL: software/add-artwork-to-opl.md
+    - OPL guide: software/OPL-guide.md
     - Install FreeHDBoot: software/install-freehdboot.md
